--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
     "create": "node ./scripts/create/script.js"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^13.11.2",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.2.1",
+    "@next/mdx": "^16.1.6",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.5.0",
     "fs": "^0.0.1-security",
-    "lucide-react": "^0.479.0",
-    "next": "15.2.1",
-    "next-mdx-remote": "^5.0.0",
+    "lucide-react": "^0.574.0",
+    "next": "16.1.6",
+    "next-mdx-remote": "^6.0.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "simple-icons": "^16.9.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.1"
+    "eslint": "^10",
+    "eslint-config-next": "16.1.6"
   }
 }
